# neobabu

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
bot/: Cargo.toml
bot/src/: commands.rs  config.rs  context.rs  core_events.rs  error.rs  events.rs  main.rs  state.rs  ui.rs
bot/src/commands/: birthday.rs  farm.rs  game.rs  owner.rs  ping.rs  settings.rs  space.rs  wallet.rs  youtube.rs
bot/src/commands/birthday/: admin.rs  set.rs  upcoming.rs
bot/src/commands/farm/: create.rs  view.rs
bot/src/commands/game/: blackjack.rs  rps.rs
bot/src/commands/game/blackjack/: start.rs  stats.rs
bot/src/commands/game/rps/: challenge.rs  stats.rs
bot/src/commands/settings/: timezone.rs
bot/src/commands/space/: apod.rs
bot/src/commands/space/apod/: admin.rs
bot/src/commands/youtube/: settings.rs  subscribe.rs
bot/src/config/: credentials.rs  emoji.rs
bot/src/core_events/: birthday_dm.rs  birthday_notification.rs  new_apod.rs  new_youtube_video.rs
bot/src/events/: guild_create.rs  message.rs  ready.rs
bot/src/ui/: autocomplete.rs  color.rs  embed.rs  emoji.rs  farming.rs  games.rs  time.rs
bot/src/ui/embed/: interactive.rs
bot/src/ui/embed/interactive/: response.rs  rows.rs
bot/src/ui/embed/interactive/rows/: accept.rs  pagination.rs
bot/src/ui/farming/: autocomplete.rs  world.rs
bot/src/ui/games/: blackjack.rs  rps.rs
bot/src/ui/message/: interactive.rs
bot/src/ui/message/interactive/: state.rs
bot/src/ui/message/interactive/state/: accept.rs  pagination.rs  simple_accept.rs
bot/src/utils/: formatting.rs
core/: Cargo.toml
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20251113_223834_initial_core.rs  m20251114_202622_initial_birthday.rs  m20251118_211931_initial_games_rps.rs  m20251120_144534_initial_apod.rs  m20251122_111720_initial_dashboard.rs  m20251125_203557_initial_youtube.rs  m20251204_132745_initial_inventory.rs  m20251204_203659_initial_farming.rs  m20251207_115149_initial_blackjack.rs  m20251208_151406_initial_economy.rs
core/src/: config.rs  cryptor.rs  database.rs  error.rs  events.rs  games.rs  integrations.rs  inventory.rs  jobs.rs  lib.rs  rendering.rs  services.rs  stores.rs  types.rs  utils.rs
core/src/database/entity/: apod.rs  black_jack_rivals.rs  black_jack_user.rs  dashboard_session.rs  economy.rs  economy_pending.rs  farming.rs  farming_world.rs  guild.rs  guild_apod.rs  guild_birthday.rs  guild_youtube.rs  guild_youtube_channel.rs  inventory_item.rs  mod.rs  prelude.rs  rps_games.rs  rps_user.rs  user.rs  user_birthday.rs  user_guild.rs  youtube_channel.rs  youtube_video.rs
core/src/database/entity_ext/: apod.rs  bj_user.rs  farming.rs  farming_world.rs  inventory_item.rs  mod.rs  user.rs  youtube_channel.rs  youtube_video.rs
core/src/events/: birthday_dm.rs  birthday_notification.rs  new_youtube_video.rs
core/src/games/: blackjack.rs  connect4.rs  farming.rs  playing_cards.rs  rps.rs
core/src/games/connect4/: ai.rs  board.rs  coords.rs  state.rs
core/src/games/farming/: day_night.rs  hemisphere.rs  layer.rs  object.rs  plant.rs  procedural.rs  season.rs  soil.rs  tile.rs  world.rs
core/src/games/farming/object/: farmland.rs
core/src/games/farming/procedural/: tile.rs
core/src/games/farming/tile/: computed.rs  ground.rs
core/src/games/rps/: choice.rs  state.rs  stats.rs
core/src/integrations/: apis.rs  client.rs  request.rs
core/src/integrations/apis/: discord.rs  nasa_apod.rs  youtube.rs
core/src/integrations/apis/discord/: guild_iterator.rs
core/src/inventory/: kind.rs  state.rs
core/src/inventory/state/: quantity.rs
core/src/jobs/: apod.rs  birthday_notification.rs  youtube_update.rs
core/src/rendering/: o2d.rs
core/src/rendering/o2d/: atlas.rs  bitmap.rs  object.rs  prelude.rs  render.rs  sprite.rs  text.rs  tileset.rs
core/src/rendering/o2d/atlas/: cache.rs
core/src/rendering/o2d/object/: grid.rs  layer.rs  position.rs  visual.rs
core/src/rendering/o2d/tileset/: mask.rs
core/src/services/: apod.rs  birthday.rs  blackjack.rs  economy.rs  farming.rs  rock_paper_scissors.rs  user.rs  youtube.rs
core/src/stores/: apod.rs  black_jack_rivals.rs  black_jack_user.rs  dashboard_session.rs  economy.rs  farming.rs  farming_world.rs  guild.rs  guild_apod.rs  guild_birthday.rs  guild_youtube.rs  guild_youtube_channel.rs  inventory_item.rs  rps_games.rs  rps_user.rs  user.rs  user_birthday.rs  user_guild.rs  youtube_channel.rs  youtube_video.rs
core/src/types/: cardinal.rs  color_gradient.rs  currency.rs  feature.rs  grid.rs  user_guild_info.rs  user_permissions.rs  user_settings.rs
core/src/types/grid/: cardinal.rs
core/src/types/user_settings/: birthday.rs
core/src/utils/: dates.rs  string.rs  timezone.rs
docker/: .env.dist  Dockerfile  Dockerfile.bot  Dockerfile.dev  Dockerfile.web  bot-config.dist.toml  docker-compose.bot.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.web.yml  (+1 more)
web/: Cargo.toml
web/dashboard/: eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
web/dashboard/src/: App.vue  main.ts
web/dashboard/src/assets/: base.css  main.css
web/dashboard/src/components/: GuildList.vue  GuildListItem.vue  NavBar.vue  UserMenu.vue
web/dashboard/src/components/settings/: BirthdaySettings.vue
web/dashboard/src/router/: index.ts
web/dashboard/src/stores/: auth.ts  csrf.ts  guild.ts  settings.ts
web/dashboard/src/views/: DashboardView.vue  HomeView.vue  SettingsView.vue
web/src/: api.rs  config.rs  error.rs  main.rs  state.rs
web/src/api/: error.rs  layers.rs  models.rs  routes.rs
web/src/api/extractors/: auth_user.rs
web/src/api/layers/: csrf.rs  rate_limit.rs  session.rs
web/src/api/models/: response.rs
web/src/api/models/discord/: user.rs
web/src/api/models/query/: auth_request.rs
web/src/api/models/response/: csrf.rs  guilds.rs  me.rs  user_settings.rs
web/src/api/routes/: auth.rs  csrf.rs  guilds.rs  me.rs  youtube.rs
web/src/api/routes/auth/: callback.rs  login.rs  logout.rs
web/src/api/routes/me/: settings.rs
web/src/api/routes/youtube/: webhook.rs
