[package]
name = "neobabu-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
neobabu-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
nanoid = "0.4.0"
poise = "0.6.1"
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1.89"