[package]
name = "neobabu-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
neobabu-core = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
humantime = "2.3.0"
nanoid = "0.4.0"
poise = "0.6.1"
rand = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1.89"
reqwest = "0.12.24"

[lints]
workspace = true