[package]
name = "neobabu-core"
version = "0.1.0"
edition = "2024"
description = "The core library containing all of neobabu's main logic."

[dependencies]
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
chacha20poly1305 = "0.11.0-rc.2"
chrono = { workspace = true }
chrono-tz = { version = "0.10.4", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
image = "0.25.9"
iso8601 = "0.6.3"
leaky-bucket = "1.1.2"
noise = "0.9.0"
rand = { workspace = true }
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-leaky-bucket = "0.4.0"
serde = { workspace = true }
serenity = "0.12.4"
strum = "0.27.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.15.1"
tracing = { workspace = true }
url = "2.5.7"