[package]
name = "neobabu-web"
version = "0.1.0"
edition = "2024"

[dependencies]
neobabu-core = { workspace = true }
axum = "0.8.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }