[package]
name = "neobabu-web"
version = "0.1.0"
edition = "2024"

[dependencies]
neobabu-core = { workspace = true }
axum = "0.8.7"
axum_csrf = { version = "0.11.0", features = ["layer"] }
governor = "0.10.2"
oauth2 = "5.0.0"
reqwest = "0.12.24"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower_governor = "0.8.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1.89"